--- a/public/products.css
+++ b/public/products.css
@@ -1,4 +1,4 @@
 body {
-  font-family: "Book Antiqua",Palatino,"Palatino Linotype","Palatino LT STD",Georgia,serif;
+  font-family: 'Nova Flat', cursive;
   background-image: url('diagonal_striped_brick.png');
 }
