Finished setting it up with signup login, and logout for bootstrap/vue.js in mini capstone

--- a/public/products.css
+++ b/public/products.css
@@ -1,4 +1,4 @@
 body {
-  font-family: 'Nova Flat', cursive;
-  background-image: url('diagonal_striped_brick.png');
+  font-family: "Nova Flat", cursive;
+  background-image: url("diagonal_striped_brick.png");
 }
